--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,6 +44,7 @@
     overflow-y: auto;
     padding: 0px;
     max-width: 500px;
+    min-width: 500px;
 }
 
 .pane-map {
@@ -54,6 +55,7 @@
 @media screen and (max-width: 1400px) {
     .pane-results {
         max-width: 400px;
+        min-width: 400px;
     }
 }
 
@@ -71,6 +73,7 @@
 
     .pane-results {
         max-width: 100%;
+        min-width: 0px;
         height: 100%;
     }
 }
