--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -133,3 +133,13 @@
         transform: rotate(360deg);
     }
     } 
+
+.cond {
+    font-size: 12px;
+    color: #00000099;
+    margin-top: 8px;
+}
+
+.cond a {
+    color: #00000099;
+}
